--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,6 +20,9 @@
       </ion-card-content>
     </ion-card>
   </ng-container>
+  <label>Previous days:</label>
+  <input #dateInput type="date">
+
 
   <ng-template #loading>
     <ion-spinner name="crescent"></ion-spinner>
